# nanokvm-hid

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/nanokvm-hid/: SKILL.md
src/nanokvm_hid/: __init__.py  cli.py  constants.py  gpio.py  hdmi.py  hid_manager.py  jiggler.py  keyboard.py  mouse.py  screen.py  storage.py  stream.py  transport.py  virtual_devices.py  wol.py
tests/: conftest.py  test_cli.py  test_cli_new.py  test_constants.py  test_gpio.py  test_hdmi.py  test_hid_manager.py  test_jiggler.py  test_keyboard.py  test_mouse.py  test_screen.py  test_storage.py  test_stream.py  test_virtual_devices.py  test_wol.py
