[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanokvm-hid"
version = "0.2.0"
description = "Python library for controlling keyboard, mouse, and touchpad via HID gadgets on NanoKVM Pro"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "messense" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[project.scripts]
nanokvm-hid = "nanokvm_hid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nanokvm_hid"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
